[project]
name = "websocket-trade-replayer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Lytvynenko",email = "lytvynenko.i.d@gmail.com"}
]
readme = "task.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportExplicitAny = "none"
reportImplicitStringConcatenation = "none"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.0.250703"

[tool.ruff]
select = ["I001"]
